--- a/views/index.erb
+++ b/views/index.erb
@@ -1,77 +1,47 @@
-<% url = params[:url] || 'about:blank' %>
-<!DOCTYPE html>
+<%
+  url = params[:url] || 'about:blank'
+  url = "http://#{url}" unless url.start_with?("http://") || url.start_with?("https://")
+ %>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="Responsive design testing for the masses">
-  <title>Responsive Design Testing</title>
-  <style>
-    *{vertical-align:top;}
-    body{padding:20px;font-family:sans-serif;overflow-y:scroll;}
-    h2{margin:0 0 10px 0;}
-    span.small{font-size:60%;vertical-align:middle;}
-    #url{margin:0 0 20px 0px;display:block;}
-    #url input[type=text]{border:solid 1px #666;width:85%;margin:0 auto;font-size:2em;text-align:left;}
-    #url input[type=submit]{display:none;}
-    #url #options{float:right;line-height:25px;width:13%;}
-    #url #options input{margin-top:5px;}
-    #frames{/*overflow-x:scroll;*/width:100%;margin-bottom:10px;padding-bottom:20px;}
-    .frame{margin-right:20px;margin-bottom:32px;float:left;}
-    .frame:last-child{margin-right:0;}
-    .frame img{display:none;vertical-align:middle;}
-    iframe{border:solid 1px #000;}
-    /*.widthOnly { height:580px;}*/
-    /*.widthOnly { padding:20px;}*/
-    /*.widthOnly h2 span {display:none;}*/
-    /*.widthOnly iframe{height:500px;}*/
-  </style>
-</head>
-<body id="container">
-  <div id="url">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Responsive design testing for the masses">
+    <title>Responsivator V.02</title>
+
+    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" type='text/css'/>
+
+    <script>
+    var url = '<%= url %>';
+    </script>
+    <script src="/js/responsivatize.js"></script>
+
+  </head>
+<body id="responsivator"><!-- oncontextmenu="return false;" -->
+  <header>
     <form method="post">
-      <input type="text" placeholder="Introduce la URL y pulsa enter..." name="url" value="<%= url %>" />
-      <input type="submit" value="submit">
-<!--      <div id="options">
-        <label for="normal"><input id="normal" type="radio" name="option" value="1" checked>Width only</label><br />
-        <label for="accurate"><input id="accurate" type="radio" name="option" value="2">Device sizes</label>
-      </div> -->
+      <input type="text" placeholder="Introduce la URL y pulsa enter..." id="url" name="url" value="<%= url %>" class="r"/>
+      <input type="submit" value="submit" class="hidden">
     </form>
-  </div>
-  <div id="frames" class="widthOnly">
-    <div id="inner">
-<!--      <div id="f1" class="frame">
-        <h2>240<span> x 320</span> <span class="small">(small phone)</span> <img src="http://mattkersley.com/wp-content/themes/mattkersley/images/loader_large.gif" /></h2>
-        <iframe sandbox="allow-same-origin allow-forms allow-scripts" seamless width="255" height="320"></iframe>
-      </div> -->
-      <div id="f2" class="frame">
-        <h2>320<span> x 480</span> <span class="small">(iPhone)</span> <img src="http://mattkersley.com/wp-content/themes/mattkersley/images/loader_large.gif" /></h2>
-        <iframe src="<%= url %>" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="335" height="480"></iframe>
-      </div>
-      <div id="f2b" class="frame">
-        <h2>360<span> x 640</span> <span class="small">(Nokia / Symbian)</span> <img src="http://mattkersley.com/wp-content/themes/mattkersley/images/loader_large.gif" /></h2>
-        <iframe src="<%= url %>" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="375" height="640"></iframe>
-      </div>
-      <div id="f3" class="frame">
-        <h2>480<span> x 640</span> <span class="small">(small tablet / Blackberry)</span> <img src="http://mattkersley.com/wp-content/themes/mattkersley/images/loader_large.gif" /></h2>
-        <iframe src="<%= url %>" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="495" height="640"></iframe>
-      </div>
-      <div id="f3b" class="frame">
-        <h2>600<span> x ???</span> <span class="small">( ~ iPhone 4S / Galaxy Tab )</span> <img src="http://mattkersley.com/wp-content/themes/mattkersley/images/loader_large.gif" /></h2>
-        <iframe src="<%= url %>" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="615" height="640"></iframe>
-      </div>
-      <div id="f4" class="frame">
-        <h2>768<span> x 1024</span> <span class="small">(iPad - Portrait)</span> <img src="http://mattkersley.com/wp-content/themes/mattkersley/images/loader_large.gif" /></h2>
-        <iframe src="<%= url %>" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="783" height="640"></iframe>
-      </div>
-<!--      <div id="f5" class="frame">
-        <h2>1024<span> x 768</span> <span class="small">(iPad - Landscape)</span> <img src="http://mattkersley.com/wp-content/themes/mattkersley/images/loader_large.gif" /></h2>
-        <iframe sandbox="allow-same-origin allow-forms allow-scripts" seamless width="1039" height="768"></iframe>
-      </div> -->
+    <div class="options">
+      <!-- dimensiones se inyectan aquí -->
     </div>
+    <div class="colors">
+      <!-- colores se inyectan aquí -->
+    </div>
+    <div class="settings">
+      <label for="vertical"><input type="checkbox" name="vertical" id="btn-vertical-layout"> Vertical</label>
+      <a href="#" title="Usage is intuitive enough but:&#13; - Click color swatches to change background color&#13; - Ctrl + click to change foreground" class="cutre-help">(?) Cutre-help</a>
+    </div>
+  </header>
+  <div id="frames">
+      <!-- <div id="d_240x320" class="frame">
+        <h2>240 x 320 <span>(small phone)</span></h2>
+        <iframe src="http://www.google.com" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="255" height="320"></iframe>
+      </div> -->
   </div>
-<!--
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
-  <script src="/js/responsive.js"></script>
- -->
 </body>
 </html>
